--- a/about.qmd
+++ b/about.qmd
@@ -5,5 +5,6 @@ title: "About"
 About this site
 
 ```{r}
-1 + 1
 ```
+
+![An image of me holding a horned lizard](images/IMG_5779 (1)-02.jpg){width="414"}
