--- a/about.qmd
+++ b/about.qmd
@@ -2,9 +2,11 @@
 title: "About"
 ---
 
-About this site
-
 ```{r}
 ```
 
-![An image of me holding a horned lizard](images/IMG_5779 (1)-02.jpg){width="414"}
+About Me:
+
+-My name is Bailey Stender and I am a third-year undergraduate student at CSU. I am majoring in Ecosystem Science and Sustainability and minoring in Conservation Biology and Watershed Science. I hope to pursue a career in the field after graduating and want to work in conservation, ecology, or natural resources. My interests outside of my studies are rock climbing, camping, hiking, reading, and crafting.
+
+![An image of me holding a horned lizard on the Pawnee National Grassland](images/IMG_5779 (1)-02.jpg){width="414"}
