--- a/Resume.qmd
+++ b/Resume.qmd
@@ -6,4 +6,8 @@ title: "Resume"
 
 ```
 
-![](images/Bailey Stender Resume_ 2_15_25 (2)-05.pdf)
+[Resume Link](file:///C:/Users/bsten/Downloads/Bailey%20Stender%20Resume_%202_15_25%20(2).pdf)
+
+[GitHub Link](https://github.com/BaileyStender)
+
+[Linkedin Link](https://www.linkedin.com/suggested-for-you/based-on-your-accepted-invite/?error=false&origin=EMAIL&triggerAction=ACCEPT_INVITATION&vanityName=addu-gurumurthy-16b623252)
