--- a/index.qmd
+++ b/index.qmd
@@ -14,3 +14,7 @@ about:
 About Me:
 
 -My name is Bailey Stender and I am a third-year undergraduate student at CSU. I am majoring in Ecosystem Science and Sustainability and minoring in Conservation Biology and Watershed Science. I hope to pursue a career in working in the field after graduating and want to work in conservation, ecology, or natural resources. My interests outside of my studies are rock climbing, camping, hiking, reading, and crafting.
+
+[GitHub Link](https://github.com/BaileyStender)
+
+[Linkedin Link](https://www.linkedin.com/in/bailey-stender-688155256/)
